src/objects/ACCL__Product_Condition__c.object
<CustomObject>
    <description>Product specific conditons will be used for e.g. specifying product prices relevant for simple order value calculation</description>
    <fields>
        <fullName>ACCL__Condition_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Condition Template</description>
        <label>Condition Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACCL__Condition_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ACCL__Condition_Template__c.ACCL__Product_Reference__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ACCL__Condition_Template__c.ACCL__Customer_Reference__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active and product relevant condition templates can be shown.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Condition_Template__c</referenceTo>
        <relationshipLabel>Product Conditions</relationshipLabel>
        <relationshipName>Product_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Price_List_Type__c</fullName>
        <inlineHelpText>For the Wholesaler choose WS1999, for the Direct Customer choose WS2000.</inlineHelpText>
        <label>Price List Type</label>
        <picklist>
            <picklistValues>
                <fullName>WS1999</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>WS2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NotRelevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Price_Type__c</fullName>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>factory</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NotRelevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACCL__Product__c</fullName>
        <label>Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipName>Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.ACCL__RECORD_LINK, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Template_Description__c</fullName>
        <formula>ACCL__Condition_Template__r.ACCL__Description__c</formula>
        <label>Template Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>TimeLine when condition is valid for Product</description>
        <inlineHelpText>The day when the Condition will become valid for the Product.</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <inlineHelpText>The last day when the Condition will be valid for the Product.</inlineHelpText>
        <label>Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Value__c</fullName>
        <label>Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Product Condition</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Template_changes_are_not_allowed</fullName>
        <active>true</active>
        <description>Ones the Template was choosen, it could not be changed after saving.</description>
        <errorConditionFormula>NOT( ISBLANK( ACCL__Condition_Template__c ))&amp;&amp; ISCHANGED(ACCL__Condition_Template__c)</errorConditionFormula>
        <errorDisplayField>ACCL__Condition_Template__c</errorDisplayField>
        <errorMessage>Condition Template cannot be changed if it is already selected.</errorMessage>
    </validationRules>
</CustomObject>